--- a/subscapp/static/index.css
+++ b/subscapp/static/index.css
@@ -1,94 +1,110 @@
-header{
+header {
 
-    width:100%;
-    height:100px;
+    width: 100%;
+    height: 100px;
     background-size: cover;
-    
+
 }
+
 p {
-    margin:0px;
+    margin: 0px;
 }
-header h1{
-    font-size:100px;
+
+header h1 {
+    font-size: 100px;
     text-align: center;
     line-height: 100px;
-    color:black;
- }
-footer p{ text-align:center;
+    color: black;
 }
-.container{
-    width:100%;
-    
+
+footer p {
+    text-align: center;
+}
+
+.container {
+    width: 100%;
+
 
 }
-.onesubsc{
-    border:1px black solid;
-    position:relative;
-    width:800px;
-    height:250px;
-    margin:10px auto;
-    padding:0px;
+
+.onesubsc {
+    border: 1px black solid;
+    position: relative;
+    width: 800px;
+    height: 250px;
+    margin: 10px auto;
+    padding: 0px;
     font-family: fantasy;
 
 
 }
-.top{
-    height:50px;
-    width:100%;
-    position:absolute;
-    top:0px;
-    left:0px;
+
+.top {
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
-.middle{
-    height:150px;
-    width:100%;
-    position:absolute;
-    top:50px;
-    left:0px;
+
+.middle {
+    height: 150px;
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    left: 0px;
     text-align: center;
-    font-size:70px;
+    font-size: 70px;
     line-height: 150px;
 }
-.bottom{
-    height:50px;
-    width:100%;
-    position:absolute;
-    top:200px;
-    left:0px;
+
+.bottom {
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    top: 200px;
+    left: 0px;
 }
-.top-left{
-    float:left;
-    margin:0px;
+
+.top-left {
+    float: left;
+    margin: 0px;
     line-height: 50px;
-    font-size:40px;
+    font-size: 40px;
 }
-.top-right{
-    float:right;
-    margin:0px;
+
+.top-right {
+    float: right;
+    margin: 0px;
     line-height: 50px;
-    font-size:40px;
+    font-size: 40px;
 }
-.bottom-left{
-    float:left;
+
+.bottom-left {
+    float: left;
     vertical-align: bottom;
-    line-height:50px;
-    font-size:40px;
+    line-height: 50px;
+    font-size: 40px;
 }
-.bottom-right{
-    float:right;
+
+.bottom-right {
+    float: right;
     text-decoration: none;
-    
-    color:black;
-    font-size:40px;
+
+    color: black;
+    font-size: 40px;
 }
-.message p{
-    text-align:center;
-    
+
+.message p {
+    text-align: center;
+
 }
-.message div{
-    text-align:center;
- }
- .regibutton {
+
+.message div {
+    text-align: center;
+}
+
+.regibutton {
     position: relative;
     display: inline-block;
     padding: 0.25em 0.5em;
@@ -97,24 +113,137 @@ footer p{ text-align:center;
     background: #fd9535;
     border-bottom: solid 2px #d27d00;
     border-radius: 4px;
-    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
     font-weight: bold;
-  }
-  
-  .regibutton :active {
+}
+
+.regibutton :active {
     border-bottom: solid 2px #fd9535;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
-  }
-  .rec-img {
-      height:400px;
-      width:700px;
-      border:1px black solid;
-      display:inline-block;
-      margin:0 auto;
-      background-size: cover;
-  }
-  .rec{ 
-    text-align:center;
+}
+
+.rec-img {
+    height: 400px;
+    width: 700px;
+    border: 1px black solid;
+    display: inline-block;
+    margin: 0 auto;
+    background-size: cover;
+}
+
+.rec {
+    text-align: center;
     widows: 100%;
-  }
- 
+}
+
+.navbar {
+    margin-bottom: 20px;
+}
+
+.bg-dark {
+    background-color: #343a40 !important;
+}
+
+@media (min-width: 576px) .navbar-expand-sm {
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+
+.navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+}
+
+article,
+aside,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
+    display: block;
+}
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+user agent stylesheet nav {
+    display: block;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+}
+
+:root {
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #007bff;
+    --secondary: #6c757d;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+html {
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
+}
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
